--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -18,7 +18,7 @@
         <nav>
 	     <a href="#">
              <!--logo-->
-           <img src="images/logo/Reservia@3x.png" class="logo">
+           <img src="images/logo/Reservia@3x.png" class="logo" alt="logo">
          </a>
 	<ul>
 	<li><a href="#">Accommodations</a></li>
