--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     </section>
     <!--search bar-->
       <div class="search">
-          <p1>Find a place for your dream vacation</p1><br>
-          <p2>Downtown or in nature</p2>
+          <div class="p1">Find a place for your dream vacation</div><br>
+          <div class="p2">Downtown or in nature</div>
           <form class="form" style="max-width:350px">
         <i style="font-size:20px" class="fa">&#xf041;</i>
         <input type="text" placeholder="Marseille,France"  >
