--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Pet allowed
         <div class="main">
  <div class="a">
      <p>Auberge la Cannebière<br>
-         <span1>Night starting at </span1>25&#x20AC;
+         <span>Night starting at </span>25&#x20AC;
          <br>
          <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
