--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Pet allowed
 </div>
   <div class="b">
             <p>Hôtel du port<br>
-         <span>Night starting at </span>52&#x20AC;
+         <span class="1">Night starting at </span>52&#x20AC;
          <br>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
