--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ Pet allowed
 </div>
   <div class="b">
             <p>Hôtel du port<br>
-         <span class="1">Night starting at </span>52&#x20AC;
+         <span class="one">Night starting at </span>52&#x20AC;
          <br>
 <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
@@ -93,7 +93,7 @@ Pet allowed
      </p></div>
   <div class="c">
             <p>Les mouettes Hotel<br>
-         <span1>Night starting at </span1>76&#x20AC;
+         <span class="one">Night starting at </span>76&#x20AC;
          <br>
          <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
@@ -104,7 +104,7 @@ Pet allowed
      </p></div>
   <div class="d">
             <p>Hôtel de la mer<br>
-         <span1>Night starting at </span1>46&#x20AC;
+         <span class="one">Night starting at </span>46&#x20AC;
          <br>
          <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
@@ -115,7 +115,7 @@ Pet allowed
      </p></div>
   <div class="e">
             <p>Auberge Le Panier<br>
-         <span1>Night starting at </span1>23&#x20AC;
+         <span class="one">Night starting at </span>23&#x20AC;
          <br>
          <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
@@ -126,7 +126,7 @@ Pet allowed
      </p></div>
   <div class="f">
             <p>Hôtel chez Amina<br>
-         <span1>Night starting at </span1>96&#x20AC;
+         <span class="one">Night starting at </span>96&#x20AC;
          <br>
          <span class="fa fa-star checked"></span>
 <span class="fa fa-star checked"></span>
