--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Pet allowed
       <div class="all">
       <div class="g">
           <p>Morning Sun Hotel<br><br>
-         <span1>Night starting at </span1>128&#x20AC;
+         <span class="one">Night starting at </span>128&#x20AC;
               <br>
               <br>
          <span class="fa fa-star checked"></span>
@@ -163,7 +163,7 @@ Pet allowed
       </div>
       <div class="h">
           <p>Au cœur fr l'eau Bed and Breakfast<br>
-         <span1>Night starting at </span1>71&#x20AC;
+         <span class="one">Night starting at </span>71&#x20AC;
               <br>
               <br>
          <span class="fa fa-star checked"></span>
@@ -176,7 +176,7 @@ Pet allowed
       </div>
       <div class="i">
           <p>Tout Bleu et Blanc Hotel<br><br>
-         <span1>Night starting at </span1>68&#x20AC;
+         <span class="one">Night starting at </span>68&#x20AC;
               <br>
               <br>
          <span class="fa fa-star checked"></span>
