--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@ Pet allowed
   <div class="item6"><p>Longchamp Park</p></div>
 </div>
 </div>    
-    </body><br>
+    </body>
+    <br>
     <br>
     <footer>
  <div class="flex-container2">
