--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@ Romantic</div>
        <i style="font-size:24px" class="fa fa-paw" ></i>
 Pet allowed
    </div>
-<!---accommodations----------->
+<!--accommodations-->
     </div>
             <div class="accomo">
                 <div class="icon"><i style="font-size:14px" class="fa">&#xf129;</i></div>
                 <div> More than 500 accommodations  are available in the city</div>
         </div>
         <br>
-  <!--accommodations in marselle------>     
+  <!--accommodations in marselle-->     
 <div class="float-container">
 
   <div class="float-child1">
@@ -190,7 +190,7 @@ Pet allowed
   </div>
 </div>
 <div class="activites">
-    <!--Activites in Mar--->
+    <!--Activites in Mar-->
 <p>Activites in Mar</p>
 
 <div class="grid-container">
