--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Pet allowed
         
       </div>
   </div>
-  <!------most Popular-->
+  <!--most Popular-->
   <div class="float-child2">
     <div class="most-popular">
         Most Popular
