--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ Pet allowed
 </div>
 </div>    
     </body>
+	<!--footer-->
     <footer>
  <div class="flex-container2">
   <div><b>About</b><br>
